--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title"              content="Dr. Rad" />
     <meta property="og:description"        content="A portifolio i made to test somethings" />
     <link rel="stylesheet" href="assets/style.css">
+    <meta name="theme-color" content="#292a2d" >
     <title>Meu portifólio</title>
 </head>
 <body>
