--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
     <link rel="stylesheet" href="assets/style.css">
     <meta name="theme-color" content="#292a2d" >
     <title>Meu portifólio</title>
+    <noscript>
+    <style>
+        #script{
+            display: none;
+        }
+        #noscript{
+    display: block;
+    text-align: center;
+    color: rgb(255, 255, 255);
+        background:
+        linear-gradient(rgb(243, 142, 142), transparent),
+        linear-gradient(to top left, rgb(128, 252, 128), transparent),
+        linear-gradient(to top right, blue, transparent);
+        background-blend-mode: screen;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        font-size: 20px;
+        }
+    </style>
+    </noscript>
 </head>
 <body>
+    <div id="script">
    <div id="header"> 
        <img src="assets/avatar.png" id="avatar">
        <div id="header_animation">
@@ -60,6 +82,13 @@
         <p class="dev">Desenvolvido com ❤️ por <a style="color: white;" href="https://github.com/decaffeinatedcoffee">decaffeinatedcoffee</a></p>
          <a id="copyright" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"></a>       
     </div>
+</div>
+
+
+<div id="noscript">
+<p> Desculpe amigo, mas, meio que assim... eu preciso <br> do JavaScript ativado pra te mostrar meu portifólio, e meio <br> que é... seu navegador tá com isso desativado. <br> Tenta ativar e volta aqui porfas.</p>
+<img src="https://c.tenor.com/3OIeAOQyi_0AAAAd/da-rock-shitpost.gif" style="block-size: 200px;">
+</div>
 </body>
 
 
